# Desolate-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: Colored.frag  Colored.vert  Textured.frag  Textured.vert
scripts/: build.sh  commit.sh  run.sh
src/: CMakeLists.txt  Main.cpp  main.h  main.hpp
src/desolate/input/: GLFWCallbackWrapper.cpp  GLFWCallbackWrapper.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
src/desolate/render/: Renderer.cpp  Renderer.hpp
src/desolate/util/error/: ErrorHandler.cpp  ErrorHandler.hpp
src/desolate/util/opengl/: Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
src/desolate/util/opengl/buffers/: IndexBuffer.cpp  IndexBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/desolate/util/opengl/buffers/common/: VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/desolate/util/opengl/camera/: OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
src/desolate/util/window/: Window.cpp  Window.hpp
src/lacuna/: include.hpp
src/lacuna/input/: GLFWCallbackWrapper.cpp  GLFWCallbackWrapper.hpp  Input.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
src/lacuna/render/: Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
src/lacuna/util/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.h
src/lacuna/util/buffers/: IndexBuffer.cpp
src/lacuna/util/buffers/common/: VertexBufferLayout.h
src/lacuna/util/camera/: OrthographicCamera.cpp
src/lacuna/util/error/: ErrorHandler.cpp  ErrorHandler.hpp
src/lacuna/util/opengl/: Buffers.hpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
src/lacuna/util/opengl/buffers/: IndexBuffer.cpp  IndexBuffer.h  IndexBuffer.hpp  VertexBuffer.cpp  VertexBuffer.h  VertexBuffer.hpp
src/lacuna/util/opengl/buffers/common/: VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/lacuna/util/opengl/camera/: OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCamera.hpp  PerspectiveCamera.hpp
src/lacuna/util/window/: GLFWCallbackWrapper.cpp  GLFWCallbackWrapper.hpp  Window.cpp  Window.hpp
src/walnut/util/: Buffers.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/walnut/util/buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/walnut/util/buffers/common/: VertexBufferLayout.cpp  VertexBufferLayout.h
src/walnut/util/camera/: OrthographicCamera.cpp  OrthographicCamera.h
